--- a/EnergySystem.html
+++ b/EnergySystem.html
@@ -1,3 +1,4 @@
+<input type="hidden" class="sheet-tabstoggle" name="attr_sheetTab"  value="character"  />
 <div class="sheet-charactertab">
 <div class='sheet-3colrow' style="width: 800px">
     <div style="width: 125px" class="sheet-col">    
@@ -66,13 +67,19 @@
 
 
 <div class="sheet-organizationtab">
-<p>Organization goes here</p>
+<input class="sheet-section-powers" style="width: 100%; border: none; font-size: 50px" type="text" name="attr_Organization_Name">
+
+
+
+        
+	    
+</div>
 </div>
     <button type="action" name="act_character" style="margin-top: 2px;" >Personnage</button>
     <button type="action" name="act_organization" >Organisation</button>
 	
 	<input type="hidden" name="attr_defense" value="0" />
-	<input type="hidden" class="sheet-tabstoggle" name="attr_sheetTab"  value="character"  />
+
 
 <!-- ##############################################
      #               SCRIPTS SECTION              #
